[VuTH] Fix bug + dark mode

--- a/bigbluebutton-html5/public/stylesheets/re-style/re-style-base.css
+++ b/bigbluebutton-html5/public/stylesheets/re-style/re-style-base.css
@@ -198,6 +198,10 @@
     margin-bottom: 0 !important;
 }
 
+.mt-auto {
+    margin-top: auto;
+}
+
 .mt-0 {
     margin-top: 0;
 }
